--- a/src/main/resources/templates/companies/info.html
+++ b/src/main/resources/templates/companies/info.html
@@ -78,7 +78,7 @@
             </div>
         </section>
 
-        <section class="info-section" id="oportunity-section">
+        <section class="info-section" id="list-section">
             <h2 class="section-title">Oportunidades <span> </span></h2>
             <p th:unless="${#lists.isEmpty(company.internshipOfferList)}">Total de Oportunidades: <span
                     th:text="${#lists.size(company.internshipOfferList)}"></span></p>
