--- a/src/main/resources/templates/fragments/opportunityCard.html
+++ b/src/main/resources/templates/fragments/opportunityCard.html
@@ -1,5 +1,5 @@
 <div th:fragment="opportunityCard(opportunity)">
-    <div class="opportunity-item">
+    <div class="list-item">
         <h3 th:text="${opportunity.principalActivity}">Principal Atividade</h3>
         <p><strong>Carga Horária Semanal:</strong> <span th:text="${opportunity.weeklyWorkload}">40 horas</span></p>
         <p><strong>Remuneração:</strong> <span th:text="${opportunity.remunerationValue}">R$ 0,00</span></p>
