--- a/src/main/resources/static/styles/list.css
+++ b/src/main/resources/static/styles/list.css
@@ -6,9 +6,9 @@
     align-items: center;
     background-color: #17a2b8;
     color: white;
-    font-size: 1.6rem;
-    height: 2.1rem;
-    width: 25%;
+    font-size: 1.8rem;
+/*     height: 2.1rem;*/    
+    width: 35%;
     border: none;
     border-radius: 4px;
     padding: 10px 20px;
