--- a/src/main/resources/static/styles/main.css
+++ b/src/main/resources/static/styles/main.css
@@ -28,6 +28,10 @@ a:hover {
     color: var(--neutral-color-dark-state-gray);
 }
 
+.d-flex.flex-row.gap-2{
+    justify-content: space-evenly;
+}
+
 /* Classes*/
 
 img.logo {
@@ -52,4 +56,62 @@ div.logo {
     width: 100%;
     text-align: center;
     color: var(--primary-color-dark);
+}
+
+/* Estilo dos botões de envio */
+button[type="submit"] {
+    width: 100%;
+    /* background-color: #007bff; 
+    color: white; */
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s;
+}
+
+/* Estilo do botão ao passar o mouse */
+/* button[type="submit"]:hover {
+    background-color: #0056b3; 
+} */
+
+.title-page {
+    display: flex;
+    width: 100%;
+    justify-items: center;
+    justify-content: center ;
+    flex-direction: row;
+}
+
+.buttons-actions {
+    display: flex;
+    justify-items: center;
+    align-items: center;
+    justify-content: space-evenly;
+    flex-direction: row;
+    width: 100%;
+    gap: 10px;
+}
+.button-action, .buttons-actions form{
+    flex: 1; 
+    margin: 0;
+    padding: 5px; 
+    min-width: 0;
+    padding: 6px 12px;
+    border-radius: 4px;
+    font-size: 1.2rem;
+    height: 100%;
+    text-decoration: none;
+    text-align: center;
+    color: #fff;
+    border: none;
+    transition: background-color 0.3s;
+    
+}
+
+@media (max-width: 768px) {
+    .buttons-actions {
+        flex-direction: column; /* Alinha os botões verticalmente em telas menores */
+    }
 }
