--- a/src/main/resources/templates/companies/fragments/table.html
+++ b/src/main/resources/templates/companies/fragments/table.html
@@ -25,12 +25,12 @@
             <td th:text="${company.address}">td>
             <td th:text="${company.urlPage}">td>
             <td>
-                <div class="action-box">
-                    <a th:href="@{/company/info/{id}(id=${company.id})}" class="btn-action btn-view">
-                        <i class="bi bi-binoculars-fill"></i></a>
+                <div class="buttons-actions">
+                    <button th:href="@{/company/info/{id}(id=${company.id})}" class="button-action btn-view">
+                        <i class="bi bi-binoculars-fill"></i></button>
                     <form th:action="@{/company/delete/{id}(id=${company.id})}" method="post">
                         <input type="hidden" name="_method" value="DELETE" />
-                        <button class="btn-action btn-delete" type="submit" value="">
+                        <button class="button-action btn-delete" type="submit" value="">
                             <i class="bi bi-trash-fill"></i> </button>
 
                     </form>
