--- a/src/main/resources/templates/offers/fragments/card.html
+++ b/src/main/resources/templates/offers/fragments/card.html
@@ -1,23 +1,23 @@
-<div class="individual-offer-card inter-font" th:fragment="offer-card(offer)">
+<div class="individual-card inter-font" th:fragment="offer-card(offer)">
     <h3 th:text="${offer.principalActivity}"></h3>
     <div class="d-flex flex-row gap-2">
         <div class="d-flex flex-column">
-            <smal>ID:</smal>
+            <smal>ID</smal>
             <p th:text="${offer.id}"></p>
         </div>
         <div class="d-flex flex-column">
-            <smal>Contratante:</smal>
+            <smal>Contratante</smal>
             <a th:href="@{/company/info/{id}(id=${offer.companyResponsible.id})}"
                 th:text="${offer.companyResponsible.fantasyName}"></a>
         </div>
     </div>
     <div class="d-flex flex-row gap-3">
         <div class="d-flex flex-column">
-            <smal>Carga Horária Semanal:</smal>
+            <smal>Carga Horária Semanal</smal>
             <p th:text="${offer.weeklyWorkload} + ' horas'"></p>
         </div>
         <div class="d-flex flex-column">
-            <smal>Valor da Bolsa:</smal>
+            <smal>Valor da Bolsa</smal>
 
             <p>
                 <span th:if="${offer.remunerationValue > 0}"
@@ -31,13 +31,13 @@
     </div>
     <div class="d-flex flex-row gap-3">
         <div class="d-flex flex-column">
-            <smal>Vale Transporte:</smal>
+            <smal>Vale Transporte</smal>
             <p
                 th:text="${offer.transportVoucher != null && offer.transportVoucher > 0} ? 'R$' + ${#numbers.formatDecimal(offer.transportVoucher, 1, 2)} : 'Nenhum'">
                 Nenhum</p>
         </div>
         <div class="d-flex flex-column">
-            <smal>Pré-requisitos:</smal>
+            <smal>Pré-requisitos</smal>
             <p th:if="${offer.prerequisites != null && !offer.prerequisites.isEmpty()}"
                 th:text="${offer.prerequisites}"></p>
             <p th:unless="${offer.prerequisites != null && !offer.prerequisites.isEmpty()}">
@@ -45,20 +45,20 @@
         </div>
     </div>
     <div class="status-box mt-3">
-        <smal>Status da Oferta:</smal>
+        <smal>Status da Oferta</smal>
         <p th:classappend="${offer.status.ABERTA} ? 'text-success' : 'text-danger'"
             th:text="${offer.status.ABERTA} ? 'Aberta' : 'Fechada'"></p>
     </div>
-    <div class="action-box d-flex gap-2 justify-content-center mt-3">
-        <a th:href="@{info/{id}(id=${offer.id})}" class="btn-action btn-view">
+    <div class="buttons-actions d-flex gap-2 justify-content-center mt-3">
+        <a th:href="@{info/{id}(id=${offer.id})}" class="button-action btn-view">
             <i class="bi bi-binoculars-fill"></i> Visualizar
         </a>
         <form th:action="@{apply/{id}(id=${offer.id})}" method="get">
-            <input class="btn-action btn-apply" type="submit" value="Candidatar-se" />
+            <button class="button-action btn-apply" type="submit" value="Candidatar-se"></button>
         </form>
         <form th:action="@{cancel/{id}(id=${offer.id})}" method="post">
             <input type="hidden" name="_method" value="DELETE" />
-            <input class="btn-action btn-delete" type="submit" value="Cancelar" />
+            <button class="button-action btn-delete" type="submit" value="Cancelar"></button>
         </form>
     </div>
 </div>
