--- a/src/main/resources/templates/students/fragments/card.html
+++ b/src/main/resources/templates/students/fragments/card.html
@@ -1,4 +1,4 @@
-<div class="individual-student-card inter-font" th:fragment="student-card(student)">
+<div class="individual-card inter-font" th:fragment="student-card(student)">
     <h3 th:text="${student.name}"></h3>
     <div class="d-flex flex-row gap-2">
         <div class="d-flex flex-column">
@@ -26,13 +26,13 @@
             <p th:text="${student.phoneNumber}"></p>
         </div>
     </div>
-    <div class="action-box d-flex gap-2 justify-content-center mt-3">
-        <a th:href="@{info/{id}(id=${student.id})}" class="btn-action btn-view">
+    <div class="buttons-actions d-flex gap-2 justify-content-center mt-3">
+        <a th:href="@{info/{id}(id=${student.id})}" class="button-action btn-view">
             Visualizar
         </a>
         <form th:action="@{/student/delete/{id}(id=${student.id})}" method="post">
             <input type="hidden" name="_method" value="DELETE"/>
-            <input class="btn-action btn-delete" type="submit" value="Remover"/>
+            <button class="button-action btn-delete" type="submit" value="Remover">Remover</button>
         </form>
     </div>
 </div>
