--- a/src/main/resources/templates/students/info.html
+++ b/src/main/resources/templates/students/info.html
@@ -2,8 +2,12 @@
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta th:insert="~{/fragments/custom-headfiles :: perfil-headfiles(title='${student.name}')}">
+    <meta th:insert="~{/fragments/custom-headfiles :: perfil-headfiles(title=${student.name})}">
+    
     <link rel="stylesheet" th:href="@{/styles/students/info.css}">
+    
+    <link rel="stylesheet" th:href="@{/styles/fragments/card-global.css}">
+
 </head>
 
 <body>
@@ -78,52 +82,19 @@
         </section>
 
         <section class="info-section" id="oportunity-section">
-            <h2 class="section-title">Candidaturas</h2>
+            <div class="card-list-component">
 
-            <div th:if="${#lists.isEmpty(student.candidatureList)}">
-                <p class="no-content-msg">Não há registros de candidaturas.</p>
-            </div>
-
-            <th:block th:each="candidature : ${student.candidatureList}">
-                <div class="opportunity-item">
-                    <h3>
-                        <a th:href="@{/internshipOffer/info/{id}(id=${candidature.internshipOffer.id})}"
-                            th:text="${candidature.internshipOffer.principalActivity}">
-                            Principal Atividade
-                        </a>
-                    </h3>
-                    <p>
-                        <strong>Empresa:</strong>
-                        <a th:href="@{/company/info/{id}(id=${candidature.internshipOffer.companyResponsible.id})}"
-                            th:text="${candidature.internshipOffer.companyResponsible.fantasyName}">
-                            Nome da Empresa
-                        </a>
-                    </p>
-                    <p>
-                        <strong>Data Candidatura:</strong> <span
-                            th:text="${candidature.formattedDate}">10/03/2004</span>
-                    </p>
-                    <p th:if="${candidature.internshipOffer.remunerationValue != 0}">
-                        <strong>Remuneração:</strong> <span
-                            th:text="'R$ '+ ${#numbers.formatDecimal(candidature.internshipOffer.remunerationValue, 1, 2)}">R$
-                            0,00</span>
-                    </p>
-                    <p th:unless="${candidature.internshipOffer.remunerationValue != 0}">
-                        <strong>Estágio Voluntário</strong>
-                    </p>
-                    <p th:if="${candidature.internshipOffer.transportVoucher != 0}">
-                        <strong>Vale Transporte:</strong> R$ <span
-                            th:text="'R$ '+ ${#numbers.formatDecimal(candidature.internshipOffer.transportVoucher, 1, 2)}">0,00</span>
-                    </p>
-                    <p th:if="${candidature.internshipOffer.prerequisites != 0}">
-                        <strong>Pré-requisitos:</strong> <span
-                            th:text="${candidature.internshipOffer.prerequisites}">Nenhum</span>
-                    </p>
-                    <div class="button-box">
-                        <button class="btn btn-danger">Cancelar Candidatura</button>
-                    </div>
+                <h1 class="section-title"> Candidaturas</h1>
+                
+                <div th:if="${#lists.isEmpty(student.candidatureList)}">
+                    <p class="no-content-msg">Não há registros de candidaturas.</p>
                 </div>
-            </th:block>
+                
+                <th:block th:each="candidature : ${student.candidatureList}"
+                    th:insert="~{/candidatures/fragments/card(candidature)}">
+                </th:block>
+
+            </div>
         </section>
 
         <div th:replace="~{/fragments/scripts}"></div>
