Cadastro funcionando sem verificação de duplicidade

--- a/src/main/resources/static/styles/form.css
+++ b/src/main/resources/static/styles/form.css
@@ -141,3 +141,8 @@ textarea {
 .custom-file-upload:hover {
     background-color: #0056b3;
 }
+
+.error-message {
+    font-size: 0.9em;
+    color: red;
+}
